tries to fix horizontal scrolling on mobile

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -111,4 +111,7 @@ body {
     height: calc(100vh - 50px);
     overflow-y: auto;
   }
+  body{
+    overflow-x: hidden
+  }
 }
